--- a/static/css/index.css
+++ b/static/css/index.css
@@ -9,9 +9,11 @@
 
 .display-search-container {
     margin-top: 40px;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
     display: flex;
     justify-content: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .display-search-subcontainer {
@@ -51,4 +53,45 @@
 
 .displayBtn:hover {
     background-color: rgb(16, 51, 147);
+}
+
+.aiSearchBtn {
+    margin-left: 10px;
+    border-radius: 20px;
+    outline: none;
+    border: none;
+    width: auto;
+    height: 40px;
+    box-sizing: border-box;
+    padding: 9px 20px;
+    background-color: rgb(21, 66, 188);
+    color: white;
+    text-decoration: none;
+    transition: all 200ms ease-in-out;
+}
+
+.aiSearchBtn:hover {
+    background-color: rgb(16, 51, 147);
+}
+
+#results {
+    height: 100px;
+    /* background-color: blue; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#results > a {
+    color: white;
+    text-decoration: none;
+    margin-left: 15px;
+    padding: 10px 15px;
+    border-radius: 25px;
+    background-color: rgba(20, 67, 139, 0.3);
+    backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(3px);
+    /* border: 1px solid rgba(255, 255, 255, 0.3); */
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    width: auto;
 }
