Added loading spinner

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,10 @@
             <div class="display-search-subcontainer">
                 <input type="text" id="displayText">
                 <button onclick="aiSearch()" class="aiSearchBtn">AI Search</button>
+                <div id="spinner"></div>
             </div>
-            <div id="results"></div>
+            <div id="results">
+            </div>
         </div>
     </div>
 </div>
