--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,4 +1,3 @@
-
 .heading {
     font-size: 3rem;
 }
@@ -25,6 +24,7 @@
     /* border: 1px solid rgba(255, 255, 255, 0.3); */
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     width: auto;
+    position: relative;
 }
 
 #displayText {
@@ -72,6 +72,27 @@
 
 .aiSearchBtn:hover {
     background-color: rgb(16, 51, 147);
+}
+
+#spinner {
+    width: 35px;
+    height: 35px;
+    border: 5px solid #ccc;
+    border-top: 5px solid #007bff;
+    /* Blue top for animation */
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+    display: none;
+    position: absolute;
+    top: 150%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+@keyframes spin {
+    to {
+        transform: translateX(-50%) rotate(360deg);
+    }
 }
 
 #results {
