--- a/templates/ai-chatbot.html
+++ b/templates/ai-chatbot.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block styles %}
-    <link rel="stylesheet" href="{{ url_for('static', path='css/ai-search.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='css/ai-chatbot.css') }}">
 {% endblock %}
 
 {% block content %}
@@ -19,5 +19,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{{ url_for('static', path='js/ai-search.js') }}"></script>
+    <script src="{{ url_for('static', path='js/ai-chatbot.js') }}"></script>
 {% endblock %}
