--- a/static/css/index.css
+++ b/static/css/index.css
@@ -13,6 +13,7 @@
     justify-content: center;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .display-search-subcontainer {
@@ -23,7 +24,7 @@
     -webkit-backdrop-filter: blur(3px);
     /* border: 1px solid rgba(255, 255, 255, 0.3); */
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    width: auto;
+    width: 550px;
     position: relative;
 }
 
